syntax = "proto3";

package rivet.backend.cloud;

import "resources/legacy/proto/common.proto";
import "resources/legacy/proto/backend/matchmaker.proto";
import "resources/legacy/proto/backend/cdn.proto";

message Game {
	rivet.common.Uuid game_id = 1;
}

message GameNamespace {
	rivet.common.Uuid namespace_id = 1;
	optional NamespaceConfig config = 2;  // Nullable if not fetched
}

message NamespaceConfig {
	reserved 103, 104, 105;

	optional rivet.backend.cdn.NamespaceConfig cdn = 101;
	optional rivet.backend.matchmaker.NamespaceConfig matchmaker = 102;
}

message GameVersion {
	rivet.common.Uuid version_id = 1;
	optional VersionConfig config = 2;  // Nullable if not fetched
}

// Represents how a game version will be published. This is a data type that will be used
// before the version is actually inserted in to the database.
message VersionConfig {
	reserved 103, 104, 105;

	optional rivet.backend.cdn.VersionConfig cdn = 101;
	optional rivet.backend.matchmaker.VersionConfig matchmaker = 102;
}
